# osh

./: .pre-commit-hooks.yaml  CHANGELOG.md  Makefile  README.md  fixit.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  test.yaml
osh/: __main__.py  compat.py  exceptions.py  github.py  gitutils.py  helpers.py  messages.py  models.py  net.py  odoo.py  parser.py  settings.py  utils.py
osh/addons/: __init__.py  add.py  diff.py  download.py  gen_table.py  list.py  materialize.py
osh/manifest/: __init__.py  check.py  fix.py  parser.py
osh/project/: __init__.py  check.py  common.py  exclusions.py  info.py  update.py
osh/rules/: __main__.py  manifest.py
osh/submodules/: __init__.py  add.py  check.py  clean.py  flatten.sh  prune.py  rename.py  rewrite.py  show.py  update.py
tests/: .test_rename.py  test_cli_smoke.py  test_odoo.py  test_sub_rewrite.py  test_utils.py
tools/: __main__.py  add_submodule.py  compat.py  exceptions.py  fix_manifest.py  gen_addons_table.py  github.py  gitutils.py  helpers.py  manifest.py  messages.py  parser.py  rewrite_submodules.py  settings.py  utils.py
tools/addons/: __init__.py  add.py  download.py  gen_table.py  list.py
tools/manifest/: __init__.py  check.py  fix.py  parser.py
tools/rules/: examples.py  manifest.py
tools/scripts/: add_submodule.sh  main.py  rewrite_submodules.sh  rewrite_symlinks.sh
tools/submodules/: __init__.py  add.py  check.py  clean.py  prune.py  rewrite.py
