[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "odoo-scripts-helpers"
description = "Set of tools to help managing Odoo addons development"
readme = "README.md"
license = "AGPL-3.0-only"
authors = [{name = "Apik"}]
dynamic = ["version"]
dependencies = [
    "appdirs",
    "docutils",
    "pypandoc",  # for oca-gen-addon-readme to work with markdown fragments
    "freezegun",
    "github3.py>=1",
    "jinja2",
    "manifestoo-core>=1.1",
    "PyYAML",
    "polib",
    "pygments",
    "requests",
    "selenium",
    "twine",
    "wheel",
    "pyproject_dependencies ; python_version>='3.7'",
    "setuptools-odoo",  # for oca-gen-external-dependencies
    "whool",  # for oca-gen-external-dependencies
    "typing-extensions; python_version<'3.11'",
    "importlib-metadata; python_version<'3.10'",
    "tomli; python_version<'3.11'", # from 3.11 tomllib is in stdlib
    "backports.zoneinfo; python_version<'3.9'",
    "click>=8,<9",    
    "libcst",
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
]

[project.urls]
homepage = "https://github.com/apikcloud/osh"
repository = "https://github.com/apikcloud/osh"

[project.scripts]

osh-addons-add = "tools.addons.add:main"
osh-addons-download = "tools.addons.download:main"
osh-addons-list = "tools.addons.list:main"
osh-addons-table = "tools.addons.gen_table:main"
osh-man-fix = "tools.manifest.fix:main"
osh-man-rewrite = "tools.manifest.parser:main"
osh-sub-add = "tools.submodules.add:main"
osh-sub-check = "tools.submodules.check:main"
osh-sub-clean = "tools.submodules.clean:main"
osh-sub-flatten = "tools.scripts.main:flatten_submodules"
osh-sub-prune = "tools.submodules.prune:main"
osh-sub-rewrite = "tools.submodules.rewrite:main"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"